# tinyspline-rs

./: Cargo.toml  README.md
ffi/: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
ffi/src/: lib.rs
tinyspline-rs/: Cargo.toml  lib.rs
tinyspline-rs/src/: lib.rs
